# megapixels

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  camera.c  camera.css  camera.glade  camera.h  camera.ui  camera_config.c  camera_config.h  clang-format.sh  device.c  device.h  gl_quickpreview.c  gl_quickpreview.h  gl_utils.c  gl_utils.h  ini.h  io_pipeline.c  io_pipeline.h  main.c  main.h  matrix.c  meson.build  meson_options.txt  org.postmarketos.Megapixels.gresource.xml  pinephone.ini  pipeline.c  pipeline.h  postprocess.sh  process_pipeline.c  process_pipeline.h  quickdebayer.c  quickdebayer.h  quickpreview.c  quickpreview.h  uvc.ini  (+2 more)
.builds/: alpine.yml  arch.yml
config/: motorola,osprey.ini  pine64,pinephone-1.0.ini  pine64,pinephone-1.1.ini  pine64,pinephone-1.2.ini  pine64,pinephone-pro.ini  pine64,pinetab.ini  xiaomi,scorpio.ini
data/: blit.frag  blit.vert  camera.css  camera.ui  controls-popover.ui  debayer.frag  debayer.vert  meson.build  org.postmarketos.Megapixels.desktop  org.postmarketos.Megapixels.gresource.xml  org.postmarketos.Megapixels.gschema.xml  org.postmarketos.Megapixels.metainfo.xml  postprocess.sh  solid.frag  solid.vert
src/: camera.c  camera.h  camera_config.c  camera_config.h  device.c  device.h  flash.c  flash.h  gl_util.c  gl_util.h  gles2_debayer.c  gles2_debayer.h  ini.c  ini.h  io_pipeline.c  io_pipeline.h  main.c  main.h  matrix.c  matrix.h  mode.c  mode.h  pipeline.c  pipeline.h  process_pipeline.c  process_pipeline.h  zbar_pipeline.c  zbar_pipeline.h
src/renderdoc/: app.h
tests/: test_quickpreview.c
tools/: camera_test.c  list_devices.c  test_camera.c
